--- a/themes/codi-ng/layouts/index.html
+++ b/themes/codi-ng/layouts/index.html
@@ -5,7 +5,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8">
         <div id="home-jumbotron" class="jumbotron">
-          <h2 class="title">Coding With Codi</h1>
+          <h2 class="title text-center">Coding With Codi</h1>
             <div class="mw-25">
               <div class="center-block">
                 <img src="/images/me-and-fuji.jpg" class="img-fluid" width="730" height="548" alt="Me and Mt. Fuji">
