Fix missing email
- Context was not passed into the partial, thus no data (including email from site params) was unaccessible

--- a/themes/codi-ng/layouts/partials/header.html
+++ b/themes/codi-ng/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="fixed-top nav-container end-of-section">
-  {{ partial "socials.html" }}
+  {{ partial "socials.html" . }}
   <nav id="nav" class="nav justify-content-center">
     {{ range .Site.Menus.main }}
     <a class="nav-link no-style" href="{{ .URL }}">
