--- a/themes/codi-ng/layouts/404.html
+++ b/themes/codi-ng/layouts/404.html
@@ -1,2 +1,24 @@
 <!DOCTYPE html>
-It seems there is nothing here :(
+  <head>
+    <style>
+      body, html {
+        height: 100%;
+        display: grid;
+      }
+      .center {
+        margin: auto;
+        text-align: center;
+        font-family: Merriweather;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="center">
+      <h1>404 Not Found</h1>
+      <p>Sorry, there's nothing here :(</p>
+      <a href="{{ ref . "/" }}">Go back</a>
+
+    </div>
+
+  </body>
+</div>
