--- a/themes/codi-ng/layouts/partials/socials.html
+++ b/themes/codi-ng/layouts/partials/socials.html
@@ -1,38 +1,32 @@
 <div class="socials">
   <div>
-    <a href="mailto:{{$.Site.Params.email}}" class="no-style">
+    <a href="mailto:{{$.Site.Params.email}}" class="no-style" title="Email Address">
       <span class="">{{ partial "fontawesome.html" "envelope" }}</span>
-      <span class="d-none d-md-inline">Email</span>
     </a>
   </div>
   <div>
-    <a href="https://github.com/codihuston" class="no-style">
+    <a href="https://github.com/codihuston" class="no-style" title="Github">
       <span class="">{{ partial "fontawesome.html" "github" }}</span>
-      <span class="d-none d-md-inline">GitHub</span>
     </a>
   </div>
   <div>
-    <a href="https://www.instagram.com/codihuston" class="no-style">
+    <a href="https://www.instagram.com/codihuston" class="no-style" title="Instagram">
       <span class="">{{ partial "fontawesome.html" "instagram" }}</span>
-      <span class="d-none d-md-inline">Instagram</span>
     </a>
   </div>
   <div>
-    <a href="https://www.linkedin.com/in/codi-huston" class="no-style">
+    <a href="https://www.linkedin.com/in/codi-huston" class="no-style" title="LinkedIn">
       <span class="">{{ partial "fontawesome.html" "linkedin" }}</span>
-      <span class="d-none d-md-inline">LinkedIn</span>
     </a>
   </div>
   <div>
-    <a href="https://twitter.com/codingwithcodi" class="no-style">
+    <a href="https://twitter.com/codingwithcodi" class="no-style" title="Twitter">
       <span class="">{{ partial "fontawesome.html" "twitter" }}</span>
-      <span class="d-none d-md-inline">Twitter</span>
     </a>
   </div>
   <div>
-    <a href="https://www.youtube.com/@codingwithcodi" class="no-style">
+    <a href="https://www.youtube.com/@codingwithcodi" class="no-style" title="Youtube">
         <span class="">{{ partial "fontawesome.html" "youtube" }}</span>
-        <span class="d-none d-md-inline">YouTube</span>
     </a>
   </div>
 </div>
