--- a/themes/codi-ng/static/css/style.css
+++ b/themes/codi-ng/static/css/style.css
@@ -120,8 +120,8 @@ a.no-style:visited {
   align-items: baseline;
   border-bottom: 1px solid gray;
   color: white;
-  background: rgb(63,61,194);
-  background: linear-gradient(90deg, rgba(63,61,194,1) 0%, rgba(102,100,206,1) 50%);
+  background: rgb(163,230,245);
+  background: linear-gradient(90deg, rgba(163,230,245,1) 0%, rgba(120,217,255,0.9626444327731093) 50%);
 }
 
 .post-list-item {
